2006-04-02  Andrew John Hughes  <gnu_andrew@member.fsf.org>

	* java/util/Collections.java:
	(binarySearch(List, T)): Fixed signature.
	(unmodifiableList(List)): Likewise.
	(UnmodifiableList(List)): Fixed constructor.
	(UnmodifiableRandomAccessList(List)): Likewise.
	(unmodifiableMap(Map)): Fixed signature.
	(UnmodifiableMap(Map)): Fixed constructor.
	(unmodifiableSortedMap(Map)): Fixed signature.
	(UnmodifiableSortedMap(Map)): Fixed constructor.
	
2006-04-02  Andrew John Hughes  <gnu_andrew@member.fsf.org>

	* java/io/ObjectOutputStream.java:
	(writeObject(Object)): Added enum support.
	(writeClassDescriptor(ObjectStreamClass)): Likewise.
	* java/io/ObjectStreamClass.java:
	(isEnum()): New package-private method.
	(setFlags(Class)): Added enum support.
	* java/io/ObjectStreamConstants.java:
	(SC_ENUM): Added.
	
2006-03-29  Andrew John Hughes  <gnu_andrew@member.fsf.org>

	* java/io/ObjectInputStream.java:
	(parseContent(byte)): Added enum support.
	* java/io/ObjectStreamConstants.java:
	(TC_ENUM): Added.
	(TC_MAX): Changed to new maximum, TC_ENUM.
	
2006-03-27  Tom Tromey  <tromey@redhat.com>

	PR classpath/25189:
	* java/lang/Enum.java (valueOf): Ensure that the named field
	is an enum constant.
	(compareTo): Check class of enum.

2006-03-27  Tom Tromey  <tromey@redhat.com>

	* java/lang/reflect/ParameterizedType.java: Javadoc fix.

2006-03-27  Tom Tromey  <tromey@redhat.com>

	* vm/reference/java/lang/reflect/Method.java (METHOD_MODIFIERS):
	New constant.
	(getModifiersInternal): Renamed from getModifiers.
	(getModifiers): New method.
	(isBridge): Likewise.
	(isSynthetic): Likewise.
	(isVarArgs): Likewise.
	* vm/reference/java/lang/reflect/Field.java (FIELD_MODIFIERS):
	New constant.
	(getModifiersInternal): Renamed from getModifiers.
	(getModifiers): New method.
	(isSynthetic): Likewise.
	(isEnumConstant): Likewise.
	* vm/reference/java/lang/reflect/Constructor.java
	(getModifiersInternal): Renamed from getModifiers.
	(getModifiers): New method