@@ -1,3 +1,8 @@
+2006-04-10  Tom Tromey  <tromey@redhat.com>
+
+	* javax/imageio/metadata/IIOMetadataFormatImpl.java (addObjectValue):
+	Fixed parameter bounds.
+
 2006-04-02  Andrew John Hughes  <gnu_andrew@member.fsf.org>
 
 	* java/util/Collections.java:
